<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameActivity"
    android:background="@drawable/ocean_background" >

    <Button
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/back"
        android:foreground="@drawable/ic_arrow_back"
        android:foregroundGravity="center|right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/pause"
        android:foreground="@drawable/ic_pause"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lobster"
        android:text="@string/reel_deal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/found"
        app:layout_constraintEnd_toStartOf="@+id/text_found_count"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_found_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/found_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_scans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/scans_used"
        app:layout_constraintEnd_toStartOf="@+id/text_scans_count"
        app:layout_constraintTop_toBottomOf="@+id/text_found" />

    <TextView
        android:id="@+id/text_scans_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scans_count"
        app:layout_constraintEnd_toEndOf="@+id/text_found_count"
        app:layout_constraintTop_toBottomOf="@+id/text_found" />

    <TextView
        android:id="@+id/text_total_fishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_fishes"
        app:layout_constraintEnd_toEndOf="@+id/text_game_title"
        app:layout_constraintStart_toStartOf="@+id/text_game_title"
        app:layout_constraintTop_toBottomOf="@+id/text_game_title" />

    <TextView
        android:id="@+id/text_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/high_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_games_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/games_started"
        app:layout_constraintStart_toStartOf="@+id/text_high_score"
        app:layout_constraintTop_toBottomOf="@+id/text_high_score" />

    <TableLayout
        android:id="@+id/table_button_grid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_total_fishes" />

</androidx.constraintlayout.widget.ConstraintLayout>