<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ocean_background" >

  <ImageView
      android:id="@+id/image_fishing_pole"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:contentDescription="@string/fishing_pole"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toTopOf="@+id/guideline3"
      app:layout_constraintEnd_toStartOf="@+id/guideline"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/guideline2"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/fishing_pole" />

  <Button
      android:id="@+id/button_skip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/button_background"
      android:text="@string/welcome_skip"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <View
      android:id="@+id/view_overlay"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:alpha="0"
      android:background="#000000"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/text_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/lobster"
      android:shadowColor="#000000"
      android:shadowDx="1.5"
      android:shadowDy="1.3"
      android:shadowRadius="1.7"
      android:text="@string/welcome_title"
      android:textColor="@color/colorOrange"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/image_fishing_pole"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="parent" />

  <TextView
      android:id="@+id/text_authors"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="115dp"
      android:text="@string/welcome_authors"
      android:textColor="@color/colorOrange"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="parent" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.55" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.11192214" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.8491484" />

</androidx.constraintlayout.widget.ConstraintLayout>